--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^16.11.10",
     "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/runtime-dom": "^3.2.31",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "typescript": "~4.5.5",
     "unplugin-vue2-script-setup": "^0.9.3",
     "vite": "^2.8.3",
