--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.6",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.6",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
